--- a/registerPage/registerPage.html
+++ b/registerPage/registerPage.html
@@ -144,7 +144,7 @@
                         <option value="Liberia">Liberia</option>
                         <option value="Libya">Libya</option>
                         <option value="Madagascar">Madagascar</option>
-                        <option value="Malawi">Malawi</option>
+                        <option value="Malawi">Malawi</option>kkk
                         <option value="Mali">Mali</option>
                         <option value="Mauritania">Mauritania</option>
                         <option value="Mauritius">Mauritius</option>
