--- a/InsuranceHomePage/InsuranceHomePage.html
+++ b/InsuranceHomePage/InsuranceHomePage.html
@@ -6,6 +6,15 @@
     <title>Insurance Home Page</title>
     <link rel="stylesheet" href="../navbar/NavBar.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap"
+        rel="stylesheet">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -98,7 +107,6 @@
         <input type="text" placeholder="CC" required>
         <button type="submit">Submit</button>
     </form>
-</div>
 </div>
 
 <footer>
