--- a/loginPage/loginPage.html
+++ b/loginPage/loginPage.html
@@ -24,7 +24,7 @@
             </nav>
         </header>
 
-        <form class="login-form">
+        <form class="login-form" action="login.php" method="post">
             <h1 class="login-title">Login</h1>
             <div class="form-group">
                 <label for="email">Email</label>
