--- a/registerPage/registerPage.html
+++ b/registerPage/registerPage.html
@@ -223,11 +223,12 @@
             <div class="overlay"></div>
             <div class="content">
                 <span class="close-btn" onclick="togglePopup()">×</span>
-                <h2>Popup Title</h2>
-                <p>Some content here.</p>
-                <button class="btn" onclick="doSomething()">Click Me</button>
+                <h2>Registration Successful</h2>
+                <button class="btn" onclick="window.location.href='../loginPage/loginPage.html'">Login Now</button>
             </div>
         </div>
+        
+        
 
         <p id="error-message" style="color: red;"></p>
 
