--- a/DashBordPage/SalesDashBord.html
+++ b/DashBordPage/SalesDashBord.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-
+    <title>Sales Dashboard</title>
+    <link rel="stylesheet" href="../navbar/NavBar.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap"
-        rel="stylesheet">
-
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="../navbar/NavBar.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href="homePage.html">Legend Motor</a></div>
+            <div class="logo"><a href="../homePage/homePage.html">Legend Motor</a></div>
             <input type="radio" name="slider" id="menu-btn">
             <input type="radio" name="slider" id="close-btn">
             <ul class="nav-links">
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-                <li><a href="homePage.html">Home</a></li>
+                <li><a href="../homePage/homePage.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li>
                     <a href="../PurchasePage/PurchasePage.html" class="desktop-item">Vehicles</a>
@@ -44,7 +37,7 @@
                     <div class="mega-box">
                         <div class="content">
                             <div class="row">
-                                <img src="./src/img4.png" alt="">
+                                <img src="../homePage/src/img4.png" alt="">
                             </div>
 
                             <div class="row">
@@ -68,58 +61,37 @@
                 </li>
                 <li><a href="#">Feedback</a></li>
                 <!-- Add Shopping Cart Icon -->
-        <li class="nav-icon">
-            <a href="#">
-                <i class="fas fa-shopping-cart"></i>
-            </a>
-        </li>
+                <li class="nav-icon">
+                    <a href="#">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+                </li>
 
-        <!-- Add User Icon -->
-        <li class="nav-icon">
-            <a href="../loginPage/loginPage.html">
-                <i class="fas fa-user"></i>
-            </a>
-        </li>
+                <!-- Add User Icon -->
+                <li class="nav-icon">
+                    <a href="../loginPage/loginPage.html">
+                        <i class="fas fa-user"></i>
+                    </a>
+                </li>
             </ul>
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
     </nav>
-    <ul class="pages">
-        <div class="container">
-            <li>
-                <div id="fstCar">
-                    <video id="video" src="./src/aud2.mp4" autoplay muted loop></video>
-                    <div id="fstCarInfo" class="PageInfo">
-                        <h1>EcoCruise Z</h1>
-                        <p>Lease starting at $399/mo*</p>
-                    </div>
-                    <div id="fstCarFooter" class="PageFooter">
-                        <div class="buttons">
-                            <button class="btn2">Order Now</button>
-                        </div>
-                        <p>
-                            *Excludes taxes and fees with price subject to change.Available in select states.
-                            <a href="#">See Details</a>
-                        </p>
-                    </div>
-                </div>
-            </li>
-
-            <li>
-                <div id="secCar">
-                    <img id="img2" src="./src/img2.png" alt="Background Image 2">
-                </div>
-            </li>
-
-            <li>
-                <div id="thirdCar"> <!-- 修正為 "thirdCar" -->
-                    <img id="img3" src="./src/img3.png" alt="Background Image 3">
-                </div>
-            </li>
+    <div class="container">
+        <h1>銷售主頁</h1>
+        <div id="myOrders">
+            
         </div>
-    </ul>
-    <script src="./index.js"></script>
+        <button onclick="logout()">登出</button>
+    </div>
+    <script>
+        function logout() {
+            localStorage.removeItem('user');
+            window.location.href = '../homePage/homePage.html'; // 返回登錄頁面
+        }
 
+        // 你可以在這裡獲取用戶的訂單和保險報價需求
+        // 例如使用 AJAX 發送請求，獲取數據並顯示在頁面上
+    </script>
 </body>
-
 </html>
