--- a/InsuranceHomePage/InsuranceHomePage.html
+++ b/InsuranceHomePage/InsuranceHomePage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-HK">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -31,7 +28,7 @@
                     <input type="checkbox" id="Vehicles">
                     <label for="showDrop" class="mobile-item">Vehicles</label>
                     <ul class="drop-menu">
-                        <li><a href="../PurchasePage/PurchasePage.html">Online Purchase</a></li>
+                        <li><a href="../PurchasePage/PurchasePage.php">Online Purchase</a></li>
                         <li><a href="#">Vehicle Components</a></li>
                     </ul>
                 </li>
@@ -42,14 +39,13 @@
                     <div class="mega-box">
                         <div class="content">
                             <div class="row">
-                                <img src="./src/img4.png" alt="">
+                                <img src="./css/img4.png" alt="">
                             </div>
                             <div class="row">
                                 <header>Insurance Quotation Request</header>
                                 <ul class="mega-links">
-                                    <li><a href="#">Comprehensive Insurance</a></li>
-                                    <li><a href="#">Third-party Insurance</a></li>
-                                    <li><a href="#">Liability Insurance</a></li>
+                                    <li><a href="./InsuranceHomePage.php">Insurance Product</a></li>
+                                    <li><a href="#">Insurance FAQs</a></li>
                                 </ul>
                             </div>
                             <div class="row">
@@ -83,134 +79,70 @@
         </div>
 
         <div class="form-container hidden" id="insuranceForm">
-            <div id="vehicleInfoForm">
+            <div id="vehicleInfoForm" class="form-section">
                 <h3>Vehicle Information</h3>
                 <form id="vehicleForm">
                     <div class="form-group">
                         <label for="vehicleYear">Vehicle Year</label>
-                        <input type="text" id="vehicleYear" placeholder="Vehicle Year" required>
+                        <input type="text" name="vehicleYear" id="vehicleYear" required>
                     </div>
                     <div class="form-group">
                         <label for="cc">CC</label>
-                        <input type="text" id="cc" placeholder="CC" required>
+                        <input type="text" name="cc" id="cc" required>
                     </div>
                     <div class="form-group">
                         <label for="vehicleModel">Vehicle Model</label>
-                        <input type="text" id="vehicleModel" placeholder="Vehicle Model" required>
-                    </div>
-                    <div class="form-group hidden" id="priceInput">
-                        <label for="vehiclePrice">Vehicle Price</label>
-                        <input type="text" id="vehiclePrice" placeholder="Vehicle Price">
+                        <input type="text" name="vehicleModel" id="vehicleModel" required>
                     </div>
                     <button type="submit">Next</button>
                 </form>
             </div>
 
-            <div id="insuranceTypeForm" class="hidden">
-                <h2>Select Insurance Type</h2>
-                <div id="insuranceCards">
-                    <div class="insurance-card" data-type="comprehensive">
-                        <h3>Comprehensive Insurance</h3>
-                        <button class="select-insurance">Select</button>
-                    </div>
-                    <div class="insurance-card" data-type="third-party">
-                        <h3>Third-party Insurance</h3>
-                        <button class="select-insurance">Select</button>
-                    </div>
-                </div>
-            </div>
-
-            <div id="driverInfoForm" class="hidden">
+            <div id="driverInfoForm" class="form-section hidden">
                 <h3>Driver Information</h3>
-                <button id="backToInsuranceType">Back to Insurance Type</button>
                 <form id="driverForm">
                     <div class="form-group">
-                        <label for="namedDrivers">Number of Named Driver(s)</label>
-                        <select id="namedDrivers">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
                         <label for="driverAge">Driver Age</label>
-                        <select id="driverAge"></select>
-                    </div>
-                    <div class="form-group">
-                        <label for="ncd">NCD</label>
-                        <select id="ncd">
-                            <option value="0">0%</option>
-                            <option value="20">20%</option>
-                            <option value="30">30%</option>
-                            <option value="40">40%</option>
-                            <option value="50">50%</option>
-                            <option value="60">60%</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="drivingExperience">Driving Experience</label>
-                        <select id="drivingExperience">
-                            <option value="learner">P License</option>
-                            <option value="less1">Less than 1 year</option>
-                            <option value="more1">More than 1 year</option>
-                            <option value="more2">More than 2 years</option>
-                            <option value="more3">More than 3 years</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="penaltyPoints">Penalty Points in the last 3 years</label>
-                        <select id="penaltyPoints">
-                            <option value="0">0</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                            <option value="6">6</option>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9">9</option>
-                            <option value="10">10</option>
-                            <option value="11">11</option>
-                            <option value="12">12</option>
-                            <option value="13">13</option>
-                            <option value="14">14</option>
-                            <option value="15">15</option>
+                        <select name="driverAge" id="driverAge" required>
+                            <option value="18-25">18-25</option>
+                            <option value="26-35">26-35</option>
+                            <option value="36-45">36-45</option>
+                            <option value="46-55">46-55</option>
+                            <option value="56+">56+</option>
                         </select>
                     </div>
                     <div class="form-group">
                         <label for="driverOccupation">Driver Occupation</label>
-                        <input type="text" id="driverOccupation" placeholder="Occupation">
+                        <input type="text" name="driverOccupation" id="driverOccupation" required>
                     </div>
-                    <button id="nextToContactInfo">Next</button>
+                    <button type="submit" id="nextToContactInfo">Next</button>
                 </form>
             </div>
 
-            <div id="contactInfoForm" class="hidden">
+            <div id="contactInfoForm" class="form-section hidden">
                 <h3>Contact Information</h3>
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" required />
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone</label>
-                    <input type="text" id="phone" required />
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" required />
-                </div>
-                <button id="submitContactInfo">Submit</button>
+                <form id="contactForm">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" name="name" id="name" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone</label>
+                        <input type="text" name="phone" id="phone" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" required />
+                    </div>
+                    <button type="submit" id="submitContactInfo">Submit</button>
+                </form>
             </div>
 
-            <div id="confirmationMessage" class="hidden">
+            <div id="confirmationMessage" class="form-section hidden">
                 <h3>Thank you!</h3>
-                <p>We have received your quotation request, and our customer service representative will contact you as
-                    soon as possible.</p>
+                <p>We have received your quotation request, and our customer service representative will contact you as soon as possible.</p>
             </div>
         </div>
-    </div>
     </div>
 
     <footer>
@@ -219,5 +151,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
