--- a/registerPage/registerPage.html
+++ b/registerPage/registerPage.html
@@ -266,6 +266,7 @@
             <span>&copy; 2024 Legend Moto</span>
             <span>Privacy Policy</span>
             <span>Contact Us</span>
+            <span>Staff Register？<a href="staff_registerPage.html">Click Here</span>
         </footer>
     </div>
 </body>
