--- a/InsuranceHomePage/InsuranceHomePage.html
+++ b/InsuranceHomePage/InsuranceHomePage.html
@@ -44,7 +44,7 @@
                             <div class="row">
                                 <header>Insurance Quotation Request</header>
                                 <ul class="mega-links">
-                                    <li><a href="./InsuranceHomePage.php">Insurance Product</a></li>
+                                    <li><a href="./InsuranceHomePage.html">Insurance Product</a></li>
                                     <li><a href="#">Insurance FAQs</a></li>
                                 </ul>
                             </div>
@@ -64,7 +64,7 @@
                     <a href="#"><i class="fas fa-shopping-cart"></i></a>
                 </li>
                 <li class="nav-icon">
-                    <a href="../registerPage/registerPage.html"><i class="fas fa-user"></i></a>
+                    <a href="../loginPage/loginPage.html"><i class="fas fa-user"></i></a>
                 </li>
             </ul>
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
@@ -104,11 +104,6 @@
                     <div class="form-group">
                         <label for="driverAge">Driver Age</label>
                         <select name="driverAge" id="driverAge" required>
-                            <option value="18-25">18-25</option>
-                            <option value="26-35">26-35</option>
-                            <option value="36-45">36-45</option>
-                            <option value="46-55">46-55</option>
-                            <option value="56+">56+</option>
                         </select>
                     </div>
                     <div class="form-group">
