--- a/registerPage/registerPage.html
+++ b/registerPage/registerPage.html
@@ -228,7 +228,7 @@
         <p id="error-message" style="color: red;"></p>
 
         <div class="form-group">
-            <p>Ready Have Account？<button class="btn" onclick="window.location.href='../loginPage/loginPage.html'">Login</button></p>
+            <p>Ready Have Account？<button class="btn btn-secondary" onclick="window.location.href='../loginPage/loginPage.html'">Login</button></p>
         </div>
 
         <script>
