--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap"
         rel="stylesheet">
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="../navbar/NavBar.css">
@@ -40,46 +40,29 @@
                 <li>
                     <a href="#" class="desktop-item">Insurance Services</a>
                     <input type="checkbox" id="Insurance Services">
-                    <label for="showMega" class="mobile-item">Insurance Services</label>
-                    <div class="mega-box">
-                        <div class="content">
-                            <div class="row">
-                                <img src="./src/img4.png" alt="">
-                            </div>
-
-                            <div class="row">
-                                <header>Insurance Quotation Request</header>
-                                <ul class="mega-links">
-                                    <li><a href="../InsuranceHomePage/InsuranceHomePage.html">Insurance Product</a></li>
-                                    <li><a href="#">Insurance FAQs</a></li>
-
-                                </ul>
-                            </div>
-                            <div class="row">
-                                <header>Quotation Overview</header>
-                                <ul class="mega-links">
-                                    <li><a href="#">View All Quotes</a></li>
-                                    <li><a href="#">Policy Terms and Conditions</a></li>
-                                    <li><a href="#">FAQs</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                 </li>
                 <li><a href="#">Feedback</a></li>
                 <!-- Add Shopping Cart Icon -->
-        <li class="nav-icon">
-            <a href="#">
-                <i class="fas fa-shopping-cart"></i>
-            </a>
-        </li>
+                <li class="desktop-item">
+                    <a href="#">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+                    <input type="checkbox" id="showMega">
+                    <label for="showMega" class="showMegaLabel"></label>
+                    <div class="mega-box">
+                        <div class="content" id="cartItemsContainer">
+                            <!-- 顧客選擇的汽車將會出現在這裡 -->
+                        </div>
+                        <button onclick="togglePopup()" class="checkout-btn">Checkout</button> <!-- Checkout 按鈕 -->
+                    </div>
+                </li>
 
-        <!-- Add User Icon -->
-        <li class="nav-icon">
-            <a href="../loginPage/loginPage.html">
-                <i class="fas fa-user"></i>
-            </a>
-        </li>
+                <!-- Add User Icon -->
+                <li class="nav-icon">
+                    <a href="../registerPage/registerPage.html">
+                        <i class="fas fa-user"></i>
+                    </a>
+                </li>
             </ul>
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
