--- a/DashBordPage/dashboard.html
+++ b/DashBordPage/dashboard.html
@@ -59,7 +59,7 @@
 
                 <!-- Add User Icon -->
                 <li class="nav-icon">
-                    <a href="../registerPage/registerPage.html">
+                    <a href="../loginPage/loginPage.html">
                         <i class="fas fa-user"></i>
                     </a>
                 </li>
