--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -40,6 +40,29 @@
                 <li>
                     <a href="#" class="desktop-item">Insurance Services</a>
                     <input type="checkbox" id="Insurance Services">
+                    <label for="showMega" class="mobile-item">Insurance Services</label>
+                    <div class="mega-box">
+                        <div class="content">
+                            <div class="row">
+                                <img src="./src/img4.png" alt="">
+                            </div>
+                            <div class="row">
+                                <header>Insurance Quotation Request</header>
+                                <ul class="mega-links">
+                                    <li><a href="../InsuranceHomePage/InsuranceHomePage.html">Insurance Product</a></li>
+                                    <li><a href="#">Insurance FAQs</a></li>
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <header>Quotation Overview</header>
+                                <ul class="mega-links">
+                                    <li><a href="#">View All Quotes</a></li>
+                                    <li><a href="#">Policy Terms and Conditions</a></li>
+                                    <li><a href="#">FAQs</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li><a href="#">Feedback</a></li>
                 <!-- Add Shopping Cart Icon -->
@@ -59,7 +82,7 @@
 
                 <!-- Add User Icon -->
                 <li class="nav-icon">
-                    <a href="../registerPage/registerPage.html">
+                    <a href="../loginPage/loginPage.html">
                         <i class="fas fa-user"></i>
                     </a>
                 </li>
