--- a/registerPage/registerPage.html
+++ b/registerPage/registerPage.html
@@ -226,9 +226,11 @@
         </div>
 
         <p id="error-message" style="color: red;"></p>
-
+        <div class="divider">
+            <span>or</span>
+        </div>
         <div class="form-group">
-            <p>Ready Have Account？<button class="btn btn-secondary" onclick="window.location.href='../loginPage/loginPage.html'">Login</button></p>
+            <button class="btn btn-secondary" onclick="window.location.href='../loginPage/loginPage.html'">Login</button></p>
         </div>
 
         <script>
