--- a/InsuranceHomePage/InsuranceHomePage.html
+++ b/InsuranceHomePage/InsuranceHomePage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-HK">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -16,7 +19,7 @@
 
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href="../homePage/homePage.html">Legend Motor</a></div>
+            <div class="logo"><a href="homePage.html">Legend Motor</a></div>
             <input type="radio" name="slider" id="menu-btn">
             <input type="radio" name="slider" id="close-btn">
             <ul class="nav-links">
@@ -28,7 +31,7 @@
                     <input type="checkbox" id="Vehicles">
                     <label for="showDrop" class="mobile-item">Vehicles</label>
                     <ul class="drop-menu">
-                        <li><a href="../PurchasePage/PurchasePage.php">Online Purchase</a></li>
+                        <li><a href="../PurchasePage/PurchasePage.html">Online Purchase</a></li>
                         <li><a href="#">Vehicle Components</a></li>
                     </ul>
                 </li>
@@ -44,7 +47,7 @@
                             <div class="row">
                                 <header>Insurance Quotation Request</header>
                                 <ul class="mega-links">
-                                    <li><a href="./InsuranceHomePage.html">Insurance Product</a></li>
+                                    <li><a href="../InsuranceHomePage/InsuranceHomePage.html">Insurance Product</a></li>
                                     <li><a href="#">Insurance FAQs</a></li>
                                 </ul>
                             </div>
@@ -60,11 +63,26 @@
                     </div>
                 </li>
                 <li><a href="#">Feedback</a></li>
-                <li class="nav-icon">
-                    <a href="#"><i class="fas fa-shopping-cart"></i></a>
+                <!-- Add Shopping Cart Icon -->
+                <li class="desktop-item">
+                    <a href="#">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+                    <input type="checkbox" id="showMega">
+                    <label for="showMega" class="showMegaLabel"></label>
+                    <div class="mega-box">
+                        <div class="content" id="cartItemsContainer">
+                            <!-- 顧客選擇的汽車將會出現在這裡 -->
+                        </div>
+                        <button onclick="togglePopup()" class="checkout-btn">Checkout</button> <!-- Checkout 按鈕 -->
+                    </div>
                 </li>
+
+                <!-- Add User Icon -->
                 <li class="nav-icon">
-                    <a href="../loginPage/loginPage.html"><i class="fas fa-user"></i></a>
+                    <a href="../loginPage/loginPage.html">
+                        <i class="fas fa-user"></i>
+                    </a>
                 </li>
             </ul>
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
@@ -135,7 +153,8 @@
 
             <div id="confirmationMessage" class="form-section hidden">
                 <h3>Thank you!</h3>
-                <p>We have received your quotation request, and our customer service representative will contact you as soon as possible.</p>
+                <p>We have received your quotation request, and our customer service representative will contact you as
+                    soon as possible.</p>
             </div>
         </div>
     </div>
@@ -146,4 +165,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
