--- a/InsuranceHomePage/InsuranceHomePage.html
+++ b/InsuranceHomePage/InsuranceHomePage.html
@@ -19,7 +19,7 @@
 
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href="homePage.html">Legend Motor</a></div>
+            <div class="logo"><a href="../homePage/homePage.html">Legend Motor</a></div>
             <input type="radio" name="slider" id="menu-btn">
             <input type="radio" name="slider" id="close-btn">
             <ul class="nav-links">
@@ -48,15 +48,14 @@
                                 <header>Insurance Quotation Request</header>
                                 <ul class="mega-links">
                                     <li><a href="../InsuranceHomePage/InsuranceHomePage.html">Insurance Product</a></li>
-                                    <li><a href="#">Insurance FAQs</a></li>
+                                    <li><a href="../InsuranceHomePage/FAQ.html">Insurance FAQs</a></li>
                                 </ul>
                             </div>
                             <div class="row">
                                 <header>Quotation Overview</header>
                                 <ul class="mega-links">
-                                    <li><a href="#">View All Quotes</a></li>
+                                    <li><a href="../DashBordPage/insdashboard.html">Dash Board</a></li>
                                     <li><a href="#">Policy Terms and Conditions</a></li>
-                                    <li><a href="#">FAQs</a></li>
                                 </ul>
                             </div>
                         </div>
