--- a/InsuranceHomePage/FAQ.html
+++ b/InsuranceHomePage/FAQ.html
@@ -4,18 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-
+    <title>Insurance FAQs</title>
+    <link rel="stylesheet" href="../navbar/NavBar.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .faq {
+            margin-bottom: 20px;
+        }
 
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="../navbar/NavBar.css">
+        .question {
+            cursor: pointer;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .answer {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -26,7 +38,7 @@
             <input type="radio" name="slider" id="close-btn">
             <ul class="nav-links">
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-                <li><a href="homePage.html">Home</a></li>
+                <li><a href="../homePage/homePage.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li>
                     <a href="../PurchasePage/PurchasePage.html" class="desktop-item">Vehicles</a>
@@ -44,7 +56,7 @@
                     <div class="mega-box">
                         <div class="content">
                             <div class="row">
-                                <img src="./src/img4.png" alt="">
+                                <img src="./css/img4.png" alt="">
                             </div>
                             <div class="row">
                                 <header>Insurance Quotation Request</header>
@@ -54,7 +66,12 @@
                                 </ul>
                             </div>
                             <div class="row">
-                            
+                                <header>Quotation Overview</header>
+                                <ul class="mega-links">
+                                    <li><a href="#">View All Quotes</a></li>
+                                    <li><a href="#">Policy Terms and Conditions</a></li>
+                                    <li><a href="#">FAQs</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -85,41 +102,51 @@
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
     </nav>
-    <ul class="pages">
-        <div class="container">
-            <li>
-                <div id="fstCar">
-                    <video id="video" src="./src/aud2.mp4" autoplay muted loop></video>
-                    <div id="fstCarInfo" class="PageInfo">
-                        <h1>EcoCruise Z</h1>
-                        <p>Lease starting at $399/mo*</p>
-                    </div>
-                    <div id="fstCarFooter" class="PageFooter">
-                        <div class="buttons">
-                            <button class="btn2">Order Now</button>
-                        </div>
-                        <p>
-                            *Excludes taxes and fees with price subject to change.Available in select states.
-                            <a href="#">See Details</a>
-                        </p>
-                    </div>
-                </div>
-            </li>
 
-            <li>
-                <div id="secCar">
-                    <img id="img2" src="./src/img2.png" alt="Background Image 2">
-                </div>
-            </li>
+    <div class="container">
+        <h1>Insurance FAQs</h1>
 
-            <li>
-                <div id="thirdCar"> <!-- 修正為 "thirdCar" -->
-                    <img id="img3" src="./src/img3.png" alt="Background Image 3">
-                </div>
-            </li>
+        <div class="faq">
+            <div class="question">1. What is insurance?</div>
+            <div class="answer">Insurance is a risk management tool that helps protect individuals or businesses from
+                potential financial losses by paying a premium.</div>
         </div>
-    </ul>
-    <script src="./index.js"></script>
+
+        <div class="faq">
+            <div class="question">2. Why do I need insurance?</div>
+            <div class="answer">Insurance can help alleviate financial stress during unexpected events, ensuring your
+                financial security.</div>
+        </div>
+
+        <div class="faq">
+            <div class="question">3. How is insurance premium calculated?</div>
+            <div class="answer">Insurance premiums are typically calculated based on various factors, including the
+                amount of coverage, type of insurance, your age, and health status.</div>
+        </div>
+
+        <div class="faq">
+            <div class="question">4. Can I use my insurance anywhere?</div>
+            <div class="answer">This depends on your insurance policy. Some coverage may only be valid in specific areas
+                or under certain circumstances.</div>
+        </div>
+
+        <div class="faq">
+            <div class="question">5. How do I file a claim?</div>
+            <div class="answer">You can usually file a claim through your insurance company's website, by phone, or in
+                person. Be prepared with relevant documents and information.</div>
+        </div>
+
+    </div>
+
+    <script>
+        // Handle question click event to toggle answer display
+        document.querySelectorAll('.question').forEach(question => {
+            question.addEventListener('click', () => {
+                const answer = question.nextElementSibling;
+                answer.style.display = answer.style.display === 'block' ? 'none' : 'block';
+            });
+        });
+    </script>
 
 </body>
 
