--- a/InsuranceHomePage/InsuranceHomePage.html
+++ b/InsuranceHomePage/InsuranceHomePage.html
@@ -145,6 +145,7 @@
                     <div class="form-group">
                         <label for="email">Email</label>
                         <input type="email" name="email" id="email" required />
+                        <input type="hidden" id="customerId" name="customerId" value="12345">
                     </div>
                     <button type="submit" id="submitContactInfo">Submit</button>
                 </form>
