--- a/PurchasePage/PurchasePage.html
+++ b/PurchasePage/PurchasePage.html
@@ -24,12 +24,12 @@
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href="homePage.html">Legend Motor</a></div>
+            <div class="logo"><a href="../homePage/homePage.html">Legend Motor</a></div>
             <input type="radio" name="slider" id="menu-btn">
             <input type="radio" name="slider" id="close-btn">
             <ul class="nav-links">
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-                <li><a href="homePage.html">Home</a></li>
+                <li><a href="../homePage/homePage.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li>
                     <a href="../PurchasePage/PurchasePage.html" class="desktop-item">Vehicles</a>
@@ -43,6 +43,28 @@
                 <li>
                     <a href="#" class="desktop-item">Insurance Services</a>
                     <input type="checkbox" id="Insurance Services">
+                    <label for="showMega" class="mobile-item">Insurance Services</label>
+                    <div class="mega-box">
+                        <div class="content">
+                            <div class="row">
+                                <img src="./css/img4.png" alt="">
+                            </div>
+                            <div class="row">
+                                <header>Insurance Quotation Request</header>
+                                <ul class="mega-links">
+                                    <li><a href="../InsuranceHomePage/InsuranceHomePage.html">Insurance Product</a></li>
+                                    <li><a href="../InsuranceHomePage/FAQ.html">Insurance FAQs</a></li>
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <header>Quotation Overview</header>
+                                <ul class="mega-links">
+                                    <li><a href="../DashBordPage/insdashboard.html">Dash Board</a></li>
+                                    <li><a href="#">Policy Terms and Conditions</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li><a href="#">Feedback</a></li>
                 <!-- Add Shopping Cart Icon -->
@@ -62,7 +84,7 @@
 
                 <!-- Add User Icon -->
                 <li class="nav-icon">
-                    <a href="../dashboard/dashboard.html">
+                    <a href="../loginPage/loginPage.html">
                         <i class="fas fa-user"></i>
                     </a>
                 </li>
