--- a/InsuranceHomePage/FAQ.html
+++ b/InsuranceHomePage/FAQ.html
@@ -33,7 +33,7 @@
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href="homePage.html">Legend Motor</a></div>
+            <div class="logo"><a href="../homePage/homePage.html">Legend Motor</a></div>
             <input type="radio" name="slider" id="menu-btn">
             <input type="radio" name="slider" id="close-btn">
             <ul class="nav-links">
@@ -68,9 +68,8 @@
                             <div class="row">
                                 <header>Quotation Overview</header>
                                 <ul class="mega-links">
-                                    <li><a href="#">View All Quotes</a></li>
+                                    <li><a href="../DashBordPage/insdashboard.html">Dash Board</a></li>
                                     <li><a href="#">Policy Terms and Conditions</a></li>
-                                    <li><a href="#">FAQs</a></li>
                                 </ul>
                             </div>
                         </div>
