--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -50,9 +50,8 @@
                             <div class="row">
                                 <header>Insurance Quotation Request</header>
                                 <ul class="mega-links">
-                                    <li><a href="#">Comprehensive Insurance</a></li>
-                                    <li><a href="#">Third-party Insurance</a></li>
-                                    <li><a href="#">Liability Insurance</a></li>
+                                    <li><a href="../InsuranceHomePage/InsuranceHomePage.html">Insurance Product</a></li>
+                                    <li><a href="#">Insurance FAQs</a></li>
 
                                 </ul>
                             </div>
