--- a/homePage/homePage.html
+++ b/homePage/homePage.html
@@ -49,13 +49,9 @@
                             <div class="row">
                                 <header>Insurance Quotation Request</header>
                                 <ul class="mega-links">
-                                    <li><a href="../InsuranceHomePage/InsuranceHomePage.html">Insurance Product</a></li>
-<<<<<<< HEAD
+                                    <li><a href="../InsuranceHomePage/InsuranceHomePage.php">Insurance Product</a></li>
                                     <li><a href="#">Insurance FAQs</a></li>
 
-=======
-                                    <li><a href="../InsuranceHomePage/FAQ.html">Insurance FAQs</a></li>
->>>>>>> 025748363f89aecc9806f3523c3df6620dd323d4
                                 </ul>
                             </div>
                             <div class="row">
