--- a/DashBordPage/dashboard.html
+++ b/DashBordPage/dashboard.html
@@ -4,29 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dashboard</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Aldrich&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Customer Dashboard - Legend Motor</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="../DashBordPage/css/customerDashboard.css">
     <link rel="stylesheet" href="../navbar/NavBar.css">
-    <link rel="stylesheet" href="styles.css">
-
+    <script src="../auth.js"></script>
 </head>
 
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href="homePage.html">Legend Motor</a></div>
+            <div class="logo"><a href="../homePage/homePage.html">Legend Motor</a></div>
             <input type="radio" name="slider" id="menu-btn">
             <input type="radio" name="slider" id="close-btn">
             <ul class="nav-links">
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-                <li><a href="homePage.html">Home</a></li>
+                <li><a href="../homePage/homePage.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li>
                     <a href="../PurchasePage/PurchasePage.html" class="desktop-item">Vehicles</a>
@@ -40,6 +33,25 @@
                 <li>
                     <a href="#" class="desktop-item">Insurance Services</a>
                     <input type="checkbox" id="Insurance Services">
+                    <label for="showMega" class="mobile-item">Insurance Services</label>
+                    <div class="mega-box">
+                        <div class="content">
+                            <div class="row">
+                                <img src="./src/img4.png" alt="">
+                            </div>
+                            <div class="row">
+                                <header>Insurance Quotation Request</header>
+                                <ul class="mega-links">
+                                    <li><a href="../InsuranceHomePage/InsuranceHomePage.php">Insurance Product</a></li>
+                                    <li><a href="#">Insurance FAQs</a></li>
+
+                                </ul>
+                            </div>
+                            <div class="row">
+
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li><a href="#">Feedback</a></li>
                 <!-- Add Shopping Cart Icon -->
@@ -58,91 +70,103 @@
                 </li>
 
                 <!-- Add User Icon -->
-                <li class="nav-icon">
-                    <a href="../loginPage/loginPage.html">
+                <li class="nav-icon" id="userIconContainer">
+                    <a id="userIcon">
                         <i class="fas fa-user"></i>
                     </a>
                 </li>
             </ul>
+            <button id="logoutBtn" class="logout-btn">
+                <i class="fas fa-sign-out-alt"></i> Logout
+            </button>
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
     </nav>
-    <div class="space"></div>
 
-    <div class="mainContent">
-        <h2>User Dashboard</h2>
-        <div class="user-info">
-            <h3>Your Personal Information</h3>
-            <p><strong>Full Name:</strong> Jay Chow</p>
-            <p><strong>Email:</strong> jaychow@gmail.com</p>
+    <div class="dashboard-container">
+        <div class="welcome-section">
+            <h1>Welcome Back, <span id="welcomeName">Customer</span></h1>
+        </div>
+
+        <div class="orders-section">
+            <div class="section-header">
+                <h2>My Orders</h2>
+                <div class="filters">
+                    <select id="orderType">
+                        <option value="all">All Orders</option>
+                        <option value="vehicle">Vehicle Orders</option>
+                        <option value="insurance">Insurance Orders</option>
+                    </select>
+                    <select id="orderStatus">
+                        <option value="all">All Status</option>
+                        <option value="pending">Pending</option>
+                        <option value="processing">Processing</option>
+                        <option value="completed">Completed</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="orders-container">
+                <!-- 訂單卡片會由JavaScript動態生成 -->
+            </div>
         </div>
     </div>
 
-    <div class="orderRecord">
-        <h3>Order Record</h3>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Order Date</th>
-                    <th>Order ID</th>
-                    <th>Order Detail</th>
-                    <th>Status</th>
-                    <th>Estimated Arrival Time</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>2024-11-01</td>
-                    <td>LM005584</td>
-                    <td><a href="#" onclick="toggleOrderDetails('orderDetailsLM005584')">View</a></td>
-                    <td>Processing</td>
-                    <td>2025-03-01</td>
-                </tr>
-                <!-- Collapsible order details row -->
-                <tr id="orderDetailsLM005584" style="display: none;">
-                    <td colspan="5">
-                        <div class="order-details">
-                            <h4>Order Details for LM005584</h4>
-                            <table>
-                                <tr>
-                                    <th>Car Name</th>
-                                    <th>Price</th>
-                                    <th>Quantity</th>
-                                    <th>Subtotal</th>
-                                </tr>
-                                <tr>
-                                    <td>Aether X</td>
-                                    <td>$260,000</td>
-                                    <td>2</td>
-                                    <td>$520,000</td>
-                                </tr>
-                                <tr>
-                                    <td>Nebula GT</td>
-                                    <td>$330,000</td>
-                                    <td>1</td>
-                                    <td>$330,000</td>
-                                </tr>
-                                <tr>
-                                    <td>Voltura S</td>
-                                    <td>$360,000</td>
-                                    <td>3</td>
-                                    <td>$1,080,000</td>
-                                </tr>
-                            </table>
-                            <p><strong>Total Price:</strong> $1,930,000</p>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <!-- 訂單詳情Modal -->
+    <div id="orderModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Order Details</h2>
+            <div id="orderDetails">
+                <!-- 由JavaScript填充 -->
+            </div>
+            <div class="order-status-timeline">
+                <!-- 由JavaScript填充 -->
+            </div>
+        </div>
     </div>
-
     <script>
-        function toggleOrderDetails(detailsId) {
-            const detailsRow = document.getElementById(detailsId);
-            detailsRow.style.display = detailsRow.style.display === 'none' ? 'table-row' : 'none';
-        }
+        document.getElementById('logoutBtn').addEventListener('click', function () {
+            if (confirm('Are you sure you want to logout?')) {
+                fetch('../logout.php')
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.success) {
+                            // 清除本地存儲的用戶資料
+                            localStorage.removeItem('user');
+                            localStorage.removeItem('customerId');
+
+                            // 重定向到首頁
+                            window.location.href = '../homePage/homePage.html';
+                        } else {
+                            alert('Logout failed. Please try again.');
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                        alert('An error occurred during logout.');
+                    });
+            }
+        });
+
+        document.addEventListener('DOMContentLoaded', function () {
+            initAuthCheck();
+
+            // 如果需要立即獲取用戶狀態
+            checkLoginStatus().then(result => {
+                if (!result.isLoggedIn) {
+                    // 處理未登入情況
+                    console.log('User not logged in');
+                    // 可以在這裡添加相應的處理邏輯
+                } else {
+                    // 處理已登入情況
+                    console.log('User logged in:', result.userData);
+                    // 可以在這裡添加相應的處理邏輯
+                }
+            });
+        });
     </script>
+    <script src="./customerDashboard.js"></script>
 </body>
 
 </html>
