--- a/loginPage/loginPage.html
+++ b/loginPage/loginPage.html
@@ -34,6 +34,8 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password" required>
             </div>
+            <input type="checkbox" name="remember_me" id="remember_me">
+            <label for="remember_me">Remember me</label>
             <button type="submit" class="btn btn-primary">LOGIN</button>
             <div class="divider">
                 <span>or</span>
