auto ins price , chat box

--- a/DashBordPage/dashboard.html
+++ b/DashBordPage/dashboard.html
@@ -1,3 +1,10 @@
+<?php
+session_start();
+if (!isset($_SESSION['user_id']) || !isset($_SESSION['role']) || $_SESSION['role'] !== 'customer') {
+    header('Location: ../login/loginPage.html');
+    exit;
+}
+?>
 <!DOCTYPE html>
 <html lang="en">
 
