--- a/DashBordPage/insdashboard.html
+++ b/DashBordPage/insdashboard.html
@@ -85,7 +85,7 @@
 
     <div class="dashboard-container">
         <h1>Insurance Applications Dashboard</h1>
-        
+
         <div class="filters">
             <select id="orderStatus" class="filter-select">
                 <option value="all">All Status</option>
@@ -119,7 +119,7 @@
         </div>
     </div>
 
-    <!-- Modal for order details -->
+    <!-- staffDashboard.php -->
     <div id="orderModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
